--- a/views/class-details.ejs
+++ b/views/class-details.ejs
@@ -26,13 +26,13 @@
             padding: 10px 20px;
             margin-top: 20px;
             border: none;
-            background-color: #007BFF;
+            background-color: #2e4ead;
             color: white;
             border-radius: 5px;
             font-size: 16px;
         }
         .class-container button:hover, .class-container .add-field:hover {
-            background-color: #0056b3;
+            background-color: #4360b5;
         }
         .class-container input, .class-container textarea, .class-container select {
             width: 95%;
@@ -47,12 +47,22 @@
             display: none;
         }
         .class-container .chart-container {
-            width: 600px;
-            height: 400px;
-            margin: auto;
+            width: 100%; /* Make the container responsive */
+            max-width: 600px; /* Set a max-width for better presentation */
+            height: auto; /* Adjust height to content */
+            margin: 20px auto; /* Center the chart and add margin */
+            background-color: #fff; /* Add white background */
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
         }
         .class-container canvas {
             display: block;
+            width: 100%; /* Make canvas responsive */
+            height: auto; /* Adjust height to content */
+        }
+        .class-container form {
+            margin-bottom: 20px;
         }
     </style>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -128,7 +138,7 @@
             <div class="class-container">
                 <h1>Class: <%= classInfo.name %></h1>
                 <h2>Total Attendance Percentage: <%= totalAttendancePercentage.toFixed(2) %> %</h2>
-                <h2>Attendance Over Time</h2>
+                <h2>Attendance Over Time:</h2>
                 <div class="chart-container">
                     <canvas id="attendanceChart"></canvas>
                 </div>
